# tecator-fda

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: AdaFNN_installation.md  todo.md
notebooks/: 00_eda.ipynb  00_test.ipynb  01_ols.ipynb  02_ridge.ipynb  03_flr.ipynb  06_rf.ipynb  07_permuted.ipynb  08_xgb.ipynb  09_pca.ipynb
notebooks/tinkering/: 08_pca.ipynb  09_simplenn.ipynb  10_adafnn.ipynb  flr.ipynb  flr_2.ipynb
notebooks/tinkering/r_code/: scalar_on_functional_book_replication.ipynb  scalar_on_functional_book_tutorial.R
scripts/: 01_ols.py  02_ridge.py  03_flr.py  06_rf.py  08_xgb.py
src/tecatorfda/: all_models.py  data.py  fda_analysis.py  fda_models.py  ols_models.py  pca_models.py
