[project]
name = "tecator-fda"
version = "0.1.0"
description = "Functional data analysis of Tecator data set"
authors = [
    {name = "Nicholas Gaubatz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
