[tool.poetry]
name = "tecator-fda"
version = "0.1.0"
description = "Functional data analysis of Tecator data set"
authors = ["Nicholas Gaubatz"]
readme = "README.md"
packages = [
    { include = "tecatorfda", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.3.5,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
scipy = ">=1.16.3,<2.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
scikit-fda = ">=0.10.1,<0.11.0"
polars = ">=1.36.1,<2.0.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
black = ">=25.12.0,<26.0.0"
ruff = ">=0.14.9,<0.15.0"
ipykernel = ">=7.1.0,<8.0.0"
jupyter = ">=1.1.1,<2.0.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
